Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/inaccessibleMref01/InaccessibleMref01.out
InaccessibleMref01.java:14:17: compiler.err.prob.found.req: (compiler.misc.invalid.mref: kindname.method, (compiler.misc.not.def.public.cant.access: m(), p1.C))
1 error
